fix text-overflow css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -168,9 +168,6 @@ border-radius(2 px)
     margin-bottom: -10px;
     font-size: 13px;
     /*font-weight: 10;*/
-     text-overflow: ellipsis;
-     overflow: hidden;
-     white-space: nowrap;
     color: #b3b3b3;
     height: 2.4em;
     text-align: center;
